--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
+    "immer": "^10.0.3",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.21.3",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
