--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.3",
+    "viewerjs": "^1.11.6",
     "zustand": "^4.5.1"
   },
   "devDependencies": {
